# jarvis

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: 01-비전.md  02-로드맵.md  03-아키텍처.md  05-설정가이드.md  06-개발일지.md  07-향후계획.md  INDEX.md
docs/04-기능명세/: calendar.md  gmail.md
src/jarvis/: __init__.py  server.py
src/jarvis/auth/: __init__.py  github_auth.py  google_auth.py
src/jarvis/tools/: __init__.py  calendar.py  github.py  gmail.py
src/jarvis/utils/: formatting.py
tests/: test_calendar.py  test_github.py  test_gmail.py
